<resources>
    <string name="app_name">TestLogin</string>
    <string name="facebook_app_id">1772841336089701</string>
    <string name="fb_login_protocol_scheme">fb1772841336089701</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ok">Open</string>
    <string name="cancel">Open</string>
    <string name="firstques">You are one of the very first members of a new GoLit community. We’re excited to see what you create, and we’re even more excited to partner with you to create incredible travel experiences for guests from around the world.
    </string>
    <string name="thirdques">Use the preview on the right to see how your experience will look publicly. As you create the description for your experience, it will appear in the preview. Write in a clear, straightforward, and friendly way. We’ll give you tips on when to show off your personality and be more descriptive.
    </string>
    <string name="fourthques1">Write something simple and short. Mention the location if it’s relevant. (10 to 40 Characters)</string>
    <string name="fourthques2">You can adjust this time later depending on the dates you’re scheduled to host. Each experience must be at least 2 hours.
    </string>
    <string name="fourthques3">Clearly describe your experience in one short, catchy sentence. Start with a verb that tells guests what they will do.
    </string>
    <string name="fifthques1">Choose photos that showcase the location and what guests will be doing.
    </string>
    <string name="sixthques1">Describe in detail what you’ll be doing with your guests. The more information you can give, the better.
    </string>
    <string name="sixthques2">Name all the locations you’ll visit. Give guests a glimpse of why they’re meaningful.
    </string>
    <string name="seventhques1">Let guests know exactly where you’ll be meeting. The exact address won’t be shared with guests until they book.
    </string>
    <string name="eighthques1">On this page, you can add additional details about what you are providing. For example, you can let your guests know that you accommodate vegetarians.
    </string>
    <string name="ninthques1">Mention anything that guests will have to bring with them or arrange on their own, like transportation.
    </string>
    <string name="tenthques1">Just a few more things and you’re ready to submit!
    </string>
    <string name="eleventhques1">Describe yourself and tell guests how you came to be passionate about hosting this experience.
    </string>
    <string name="twelvethques1">Add any age limits, certifications, or abilities required for your experience.
    </string>
    <string name="twelvethques2">Guest must have scuba diving certificate, Guest need to meet legal drinking age...
    </string>
    <string name="twelvethques3">Guest must be fit enough to jog 6 miles...
    </string>
    <string name="thirteenthques1">What is the number of guests you can accommodate?
    </string>
    <string name="thirteenthques2">The price of your experience is entirely up to you. If you have questions, read up on tips for setting your price.
    </string>
    <string name="thirteenthques3">We recommend giving yourself a day or two to prepare.
    </string>
    <string name="fourteenthques1">What information can help guests better understand and appreciate your experience? You can include books, films, documentaries, articles, songs, or artists. We’ll send this to your guests after they book.
    </string>
    <string name="fifteenques1">To qualify to be on Airbnb, you’re responsible for your experience, so take one last look and make sure :
    </string>
    <string name="fifteenques2">You meet Airbnb’s quality standards.
    </string>
    <string name="fifteenques3">Your experience complies with local laws. To learn more, read about business licensing and other local laws that may apply to your experience.
    </string>
    <string-array name="spinnertype">
        <item>Select Type</item>
        <item>Ecotourism</item>
        <item>Medical Tourism</item>
        <item>Cultural Tourism</item>
        <item>Food Tourism</item>
        <item>Leisure Tourism</item>
        <item>Sport Tourism</item>
        <item>Business Tourism</item>
        <item>Health Tourism</item>
    </string-array>
    <string-array name="spinnernames">
        <item>Select Language</item>
        <item>English</item>
        <item>Chinese</item>
        <item>Malay</item>
        <item>Tamil</item>
        <item>Thai</item>
        <item>Japanese</item>
        <item>Espanol</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Deutsch</item>
    </string-array>
    <string-array name="guestspinner">
        <item>Select Number of Guest</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
    <string-array name="daysprepare">
        <item>Time Required to Prepare</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>

    </string-array>
</resources>