<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Review your experience one last time"
        android:textSize="27sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/p15Title1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifteenques1"
        android:id="@+id/p15Content1"
        android:layout_below="@id/p15Title1"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="11dp"
        />




    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p15CheckBox1"
        android:layout_marginLeft="20dp"
        android:text="@string/fifteenques2"
        android:padding="15dp"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/p15Content1"
        android:layout_alignStart="@+id/p15Content1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p15CheckBox2"

        android:layout_below="@id/p15CheckBox1"
        android:text="@string/fifteenques3"
        android:padding="15dp"
        android:layout_alignStart="@+id/p15CheckBox1"
        android:layout_marginTop="25dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:text="Submit"
        android:background="@drawable/buttshape"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="27dp"
        android:id="@+id/p15Submit"/>


</RelativeLayout>