<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maximum Number of Guest"
        android:textColor="#000000"
        android:textSize="27sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:id="@+id/p13Title1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirteenthques1"
        android:textSize="17sp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/p13Content1"
        android:layout_below="@id/p13Title1"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p13Spinner1"
        android:layout_marginTop="13dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/p13Content1">

    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set a price per guest (USD)"
        android:textSize="27sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_below="@id/p13Spinner1"
        android:layout_marginEnd="5dp"
        android:id="@+id/p13Title2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirteenthques2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:id="@+id/p13Content2"
        android:textSize="17sp"
        android:layout_below="@id/p13Title2"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="17"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape"
        android:id="@+id/p13EditBox1"
        android:layout_below="@id/p13Content2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How much time do you need to prepare?"
        android:textSize="27sp"
        android:textColor="#000000"
        android:id="@+id/p13Title3"
        android:textStyle="bold"
        android:layout_below="@id/p13EditBox1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirteenthques3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="17dp"
        android:layout_below="@id/p13Title3"
        android:layout_marginTop="12dp"
        android:id="@+id/p13Content3"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:id="@+id/p13Spinner2"
        android:layout_below="@id/p13Content3"
        >

    </Spinner>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:text="Next"
        android:background="@drawable/buttshape"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="25dp"
        android:id="@+id/p13Next"/>






</RelativeLayout>