<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p4RelativeLayout"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title Your Experience"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_margin="20dp"
        android:id="@+id/p4title1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourthques1"
        android:textSize="20sp"
        android:layout_below="@id/p4title1"
        android:id="@+id/p4content1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_marginTop="12dp"
        android:hint="   Enter Experience Title"
        android:layout_marginStart="10dp"
        android:id="@+id/p4editBox1"
        android:layout_below="@+id/p4content1"
        android:layout_alignStart="@+id/p4content1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set your default time"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_below="@id/p4editBox1"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:id="@+id/p4title2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourthques2"
        android:textSize="20sp"
        android:layout_below="@id/p4title2"
        android:id="@+id/p4content2"
        android:layout_marginTop="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p4Spinner1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="21dp"

        android:layout_below="@+id/p4content2">

    </Spinner>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p4Spinner2"
        android:layout_toRightOf="@id/p4Spinner1"
        android:layout_below="@id/p4content2"
        android:layout_marginTop="21dp"
        android:layout_marginStart="50dp">


    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Write a tagline"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/p4Spinner1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/p4title3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourthques3"
        android:layout_below="@id/p4title3"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:id="@+id/p4content3"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/p4content3"
            android:ems="15"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:hint="Write Your Tagline Here"
            android:id="@+id/p4editBox2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/p4button1"
            android:layout_below="@id/p4editBox2"
            android:background="@drawable/buttshape"
            android:layout_alignParentEnd="true"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_margin="20dp"/>




    </RelativeLayout>








</ScrollView>